@@ -19,7 +19,6 @@ _Plowshare_ is a command-line downloader and uploader for some of the most popul
 || [http://www.rapidshare.com Rapidshare] || anonymous, Premium-Zone || anonymous, Free-Zone, Premium-Zone || yes || -||
 || [http://www.sendspace.com Sendspace] || anonymous || -|| -|| yes ||
 || [http://www.storage.to Storage.to] || anonymous || -|| -|| -||
-|| [http://www.uploaded.to Uploaded.to] || anonymous || -|| -|| -||
 || [http://www.uploading.com Uploading.com] || anonymous || -|| -|| -||
 || [http://www.usershare.net Usershare] || anonymous || -|| -|| -||
 || [http://www.x7.to x7.to] || anonymous, free account || -|| -|| -||
