@@ -46,7 +46,6 @@ netload.in
 rapidshare.com
 sendspace.com
 storage.to
-uploaded.to
 uploading.com
 usershare.net
 x7.to
